Make integration tests (that talk to Docker) more clearly named