@@ -25,8 +25,8 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -35,7 +35,7 @@ import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 
-public class DockerContainersTest extends BaseTest {
+public class DockerContainersIntegrationTest extends BaseIntegrationTest {
 
     private CreateAgentRequest request;
     private DockerContainers dockerContainers;
@@ -119,7 +119,7 @@ public class DockerContainersTest extends BaseTest {
         dockerContainers.clock = new Clock.TestClock().forward(Period.minutes(9));
         dockerContainers.refreshAll(profileProperties);
 
-        Agents filteredDockerContainers = dockerContainers.instancesCreatedAfterTimeout(createClusterProfiles(), new Agents(Arrays.asList(new Agent(container.name(), null, null, null))));
+        Agents filteredDockerContainers = dockerContainers.instancesCreatedAfterTimeout(createClusterProfiles(), new Agents(List.of(new Agent(container.name(), null, null, null))));
 
         assertFalse(filteredDockerContainers.containsAgentWithId(container.name()));
     }
@@ -134,7 +134,7 @@ public class DockerContainersTest extends BaseTest {
         dockerContainers.clock = new Clock.TestClock().forward(Period.minutes(11));
         dockerContainers.refreshAll(profileProperties);
 
-        Agents filteredDockerContainers = dockerContainers.instancesCreatedAfterTimeout(createClusterProfiles(), new Agents(Arrays.asList(new Agent(container.name(), null, null, null))));
+        Agents filteredDockerContainers = dockerContainers.instancesCreatedAfterTimeout(createClusterProfiles(), new Agents(List.of(new Agent(container.name(), null, null, null))));
 
         assertTrue(filteredDockerContainers.containsAgentWithId(container.name()));
     }
